fixing the fixed-top header issue which covered some text

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -292,3 +292,14 @@ html {
         padding-top: 164px;
     }
 }
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+}
